syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.classserver;

import "ClassesDefinitions.proto";

// ClassServer -> ClassServer Service

message PropagateStateRequest {
  ClassState classState = 1;
  repeated Entry valueTS = 3;
}

message PropagateStateResponse {
  ResponseCode code = 1;
}

message Entry {
  int32 key = 1;
  int32 value = 2;
}

message Update {
  PropagateStateRequest operation = 1;
  int32 ID = 2;
  repeated Entry prevTS = 3;
}

message UpdateRequest {
  repeated Entry valueTS = 1;
}

message UpdateResponse {
  repeated Update updates = 1;
}

service ClassServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
}
