syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract;

// Classes System Definitions

// domain Standard Server (Primary, Secondary ...)

message Student {
  string studentId = 1;
  string studentName = 2;
}

message ClassState {
  int32 capacity = 1;
  bool openEnrollments = 2;
  repeated Student enrolled = 3;
  repeated Student discarded = 4;
}


enum ResponseCode {
  OK = 0;
  NON_EXISTING_STUDENT = 1;
  FULL_CLASS = 2;
  STUDENT_ALREADY_ENROLLED = 3;
  ENROLLMENTS_ALREADY_OPENED = 4;
  ENROLLMENTS_ALREADY_CLOSED = 5;
  INACTIVE_SERVER = 6;
  WRITING_NOT_SUPPORTED = 7;
  ACTIVE_SERVER = 8;
  GOSSIP_ACTIVATED=9;
  GOSSIP_DEACTIVATED=10;
}

// --------------------------------------

// domain NamingServer

message ServerEntry {
  string hostPort = 1;
  repeated string qualifiers = 2;
}

message ServiceEntry {
  string serviceName = 1;
  repeated ServerEntry serverEntries = 2;

}

message NamingServices {
  map<string,ServiceEntry> info = 1;
}

// --------------------------------------
